tests/semantic_cases/invalid/procedure_call_arity_mismatch.ob0
(* INVALID: procedure call passes fewer arguments than declared *)
MODULE Main;
PROCEDURE AddAndPrint(a, b);
BEGIN
  WriteInt(a + b)
END AddAndPrint;
BEGIN
  AddAndPrint(2)
END Main.
